2008-10-28  Andy Buckley  <andy@insectnation.org>

	* Auto-booking of histograms with a name, rather than the HepData
	ID 3-tuple is now possible.

	* Fix in CDF 2001 pT spectra to get the normalisations to depend
	on the pT_lead cutoff.

2008-10-23  Andy Buckley  <andy@insectnation.org>

	* rivet handles signals neatly, as for rivetgun, so that premature
	killing of the analysis process will still result in an analysis
	file.

	* rivet now accepts cross-section as a command line argument and,
	if it is missing and is required, will prompt the user for it
	interactively.

2008-10-22  Andy Buckley  <andy@insectnation.org>

	* rivet (Python interface) now can list analyses, check when
	adding analyses that the given names are valid, specify histo file
	name, and provide sensibly graded event number logging.

2008-10-20  Andy Buckley  <andy@insectnation.org>

	* Corrections to CDF 2004 analysis based on correspondance with
	Joey Huston. M bias dbns now use whole event within |eta| < 0.7,
	and Cheese plots aren't filled at all if there are insufficient
	jets (and the correct ETlead is used).

2008-10-08  Andy Buckley  <andy@insectnation.org>

	* Added AnalysisHandler::commitData() method, to allow the Python
	interface to write out a histo file without having to know
	anything about the histogramming API.

	* Reduced SWIG interface file to just map a subset of Analysis and
	AnalysisHandler functionality. This will be the basis for a new
	command line interface.

2008-10-06  Andy Buckley  <andy@insectnation.org>

	* Converted FastJets plugin to use a Boost shared_pointer to the
	cached ClusterSequence. The nullness of the pointer is now used to
	indicate an empty tracks (and hence jets) set. Once FastJet
	natively support empty CSeqs, we can rewrite this a bit more
	neatly and ditch the shared_ptr.

2008-10-02  Andy Buckley  <andy@insectnation.org>

	* The CDF_2004 (Acosta) data file now includes the full range of